--- a/View/Sys/Templates/moduleform/controller.phtml
+++ b/View/Sys/Templates/moduleform/controller.phtml
@@ -5,15 +5,15 @@
     		<div class="card-body">
     			<h5 class="card-title m-b-15">Add Controller</h5>
 
-                <input type="hidden" name="vendor" value="<?= $vendorName ?>" required>
-                <input type="hidden" name="module" value="<?= $moduleName ?>" required>
+                <input type="hidden" name="vendor_name" value="<?= $vendorName ?>" required>
+                <input type="hidden" name="module_name" value="<?= $moduleName ?>" required>
 
                 <div class="form-group row">
                     <label class="col-sm-3 text-right control-label col-form-label">Controller For</label>
                     <div class="col-md-9">
-                        <select class="select2 form-control custom-select" style="width: 100%; height:36px;">
-                            <option value="Public">Public</option>
-                            <option value="Admin">Admin</option>
+                        <select class="select2 form-control custom-select" name="controller_type" style="width: 100%; height:36px;">
+                            <option value="public">Public</option>
+                            <option value="admin">Admin</option>
                         </select>
                     </div>
                 </div>
