--- a/View/Sys/Templates/moduleform/controller.phtml
+++ b/View/Sys/Templates/moduleform/controller.phtml
@@ -18,6 +18,15 @@
                     </div>
                 </div>
 
+                <div class="form-group row m-b-0">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-9">
+                        <div class="custom-control custom-checkbox mr-sm-2">
+                            <input type="checkbox" class="custom-control-input" id="controller-route-regex" name="controller_route_regex" value="yes">
+                            <label class="custom-control-label" for="controller-route-regex">Route Regex</label>
+                        </div>
+                    </div>
+                </div>
     			<div class="form-group row">
                     <label for="controller-route" class="col-sm-3 text-right control-label col-form-label">Route</label>
                     <div class="col-sm-9">
@@ -26,6 +35,16 @@
                     </div>
                 </div>
 
+
+                <div class="form-group row m-b-0">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-9">
+                        <div class="custom-control custom-checkbox mr-sm-2">
+                            <input type="checkbox" class="custom-control-input" id="controller-controller-regex" name="controller_controller_regex" value="yes">
+                            <label class="custom-control-label" for="controller-controller-regex">Controller Regex</label>
+                        </div>
+                    </div>
+                </div>
     			<div class="form-group row">
                     <label for="controller-controller" class="col-sm-3 text-right control-label col-form-label">Controller</label>
                     <div class="col-sm-9">
@@ -34,11 +53,30 @@
                     </div>
                 </div>
 
+
+                <div class="form-group row m-b-0">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-9">
+                        <div class="custom-control custom-checkbox mr-sm-2">
+                            <input type="checkbox" class="custom-control-input" id="controller-action-regex" name="controller_action_regex" value="yes">
+                            <label class="custom-control-label" for="controller-action-regex">Action Regex</label>
+                        </div>
+                    </div>
+                </div>
     			<div class="form-group row">
                     <label for="" class="col-sm-3 text-right control-label col-form-label">Action</label>
                     <div class="col-sm-9">
                         <input type="text" class="form-control" id="controller-action" name="controller_action" value="">
                         <p class="m-b-0"><small class="text-muted">Default is index</small></p>
+                    </div>
+                </div>
+
+
+                <div class="form-group row">
+                    <label for="extend-to-class" class="col-sm-3 text-right control-label col-form-label">Extend To Class</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="extend-to-class" name="extend_to_class" value="">
+                        <p class="m-b-0"><small class="text-muted">Default is \Of\Controller\Controller</small></p>
                     </div>
                 </div>
     		</div>
