--- a/View/Sys/Templates/system_module_create.phtml
+++ b/View/Sys/Templates/system_module_create.phtml
@@ -14,6 +14,8 @@ $moduleVer = '';
 
 <?php require_once(__DIR__ . '/container_top.phtml') ?>
 	<div class="row">
-		<?php require_once(__DIR__ . '/moduleform/module.phtml') ?>
+		<div class="col-md-6">
+			<?php require_once(__DIR__ . '/moduleform/module.phtml') ?>
+		</div>
 	</div>
 <?php require_once(__DIR__ . '/container_bottom.phtml') ?>
