--- a/View/Sys/vue/components/opoinkinstallcard/template.html
+++ b/View/Sys/vue/components/opoinkinstallcard/template.html
@@ -40,7 +40,43 @@
 				<p class="mB-0 mT-30">We highly recommend to use Maria Database server version: ^10.2.x</p>
 			</div>
 			<div v-if="opoinkinstall.currentStep == 3">
-				<p class="mB-5 fs-18 fw-800">Database: <span class="fs-16 fw-400">we will create a database table if it does not exist, else existing database table will be used.</span></p>
+				<p class="mB-5 fs-18 fw-800">
+					Database: <span class="fs-16 fw-400">we will create a database table if it does not exist, else existing database table will be used.</span>
+				</p>
+				<div class="row mT-30">
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="input_host">Host <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_host" v-model="opoinkinstall.form.database.host"/>
+							<small class="form-text text-muted">Database host that will be used.</small>
+						</div>
+
+						<div class="form-group">
+							<label for="input_user">User <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_user" v-model="opoinkinstall.form.database.user"/>
+							<small class="form-text text-muted">The database username</small>
+						</div>
+
+						<div class="form-group">
+							<label for="input_name">Database name <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_name" v-model="opoinkinstall.form.database.name"/>
+							<small class="form-text text-muted">The database name</small>
+						</div>
+
+						<div class="form-group">
+							<label for="input_password">Password</label>
+							<input type="text" class="form-control" id="input_password" v-model="opoinkinstall.form.database.password"/>
+							<small class="form-text text-muted">Optional, the database password</small>
+						</div>
+
+						<div class="form-group">
+							<label for="input_prefix">Prefix</label>
+							<input type="text" class="form-control" id="input_prefix" maxlength="5" v-model="opoinkinstall.form.database.prefix"/>
+							<small class="form-text text-muted">Optional, will be added into the table name</small>
+						</div>
+					</div>
+				</div>
+				<p class="mT-15 fc-red" v-if="opoinkinstall.form.database.error">{{opoinkinstall.form.database.error}}</p>
 			</div>
 		</div>
 		<div class="card-footer">
