--- a/View/Sys/vue/components/opoinkinstallcard/template.html
+++ b/View/Sys/vue/components/opoinkinstallcard/template.html
@@ -37,14 +37,18 @@
 					</span>
 					{{opoinkinstall.requirement.writabledir.message}}
 				</p>
-				<p class="mB-0 mT-30">We highly recommend to use Maria Database server version: ^10.2.x</p>
+				<p class="mB-0 mT-30">We highly recommend to use Maria Database server version: ^10.x.x</p>
 			</div>
 			<div v-if="opoinkinstall.currentStep == 3">
 				<p class="mB-5 fs-18 fw-800">
-					Database: <span class="fs-16 fw-400">we will create a database table if it does not exist, else existing database table will be used.</span>
+					Database: 
+					<span class="fs-16 fw-400">Make sure that the database name was already exisitng.</span>
+					<span class="fs-16 fw-400">If not Opoink will try to create a database.</span>
+					<br />
+					<span class="fs-16 fw-400">We highly recommend to use MariaDB version: ^10.x.x</span>
 				</p>
 				<div class="row mT-30">
-					<div class="col-md-4">
+					<div class="col-md-6">
 						<div class="form-group">
 							<label for="input_host">Host <span class="fc-red">*</span></label>
 							<input type="text" class="form-control" id="input_host" v-model="opoinkinstall.form.database.host"/>
@@ -58,6 +62,13 @@
 						</div>
 
 						<div class="form-group">
+							<label for="input_prefix">Prefix</label>
+							<input type="text" class="form-control" id="input_prefix" maxlength="5" v-model="opoinkinstall.form.database.prefix"/>
+							<small class="form-text text-muted">Optional, will be added into the table name</small>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="form-group">
 							<label for="input_name">Database name <span class="fc-red">*</span></label>
 							<input type="text" class="form-control" id="input_name" v-model="opoinkinstall.form.database.name"/>
 							<small class="form-text text-muted">The database name</small>
@@ -68,19 +79,52 @@
 							<input type="text" class="form-control" id="input_password" v-model="opoinkinstall.form.database.password"/>
 							<small class="form-text text-muted">Optional, the database password</small>
 						</div>
-
-						<div class="form-group">
-							<label for="input_prefix">Prefix</label>
-							<input type="text" class="form-control" id="input_prefix" maxlength="5" v-model="opoinkinstall.form.database.prefix"/>
-							<small class="form-text text-muted">Optional, will be added into the table name</small>
-						</div>
 					</div>
 				</div>
 				<p class="mT-15 fc-red" v-if="opoinkinstall.form.database.error">{{opoinkinstall.form.database.error}}</p>
 			</div>
+
+			<div v-if="opoinkinstall.currentStep == 4">
+				<p class="mB-5 fs-18 fw-800">
+					System Account: 
+					<span class="fs-16 fw-400">System’s account is used only for this installation of Opoink Framework.</span>
+					<br />
+					<span class="fs-16 fw-400">Opoink Framework will never collect this information, and will never be shared to anyone else.</span>
+				</p>
+				<div class="row mT-30">
+					<div class="col-md-6">
+						<div class="form-group">
+							<label for="input_first_name">First Name <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_first_name" v-model="opoinkinstall.form.sysuser.firstname"/>
+						</div>
+						<div class="form-group">
+							<label for="input_last_name">Last Name <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_last_name" v-model="opoinkinstall.form.sysuser.lastname"/>
+						</div>
+						<div class="form-group">
+							<label for="input_email">Email <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_email" v-model="opoinkinstall.form.sysuser.email"/>
+							<small class="form-text text-muted">It is important for you to type a working email address here.</small>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="form-group">
+							<label for="input_password">Password <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_password" v-model="opoinkinstall.form.sysuser.password"/>
+						</div>
+						<div class="form-group">
+							<label for="input_retype_password">Retype Password <span class="fc-red">*</span></label>
+							<input type="text" class="form-control" id="input_retype_password" v-model="opoinkinstall.form.sysuser.retypepassword"/>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="card-footer">
 			<div class="text-right">
+				<button type="button" class="btn btn-outline-primary mR-15" v-if="opoinkinstall.currentStep > 1" v-on:click="opoinkinstall.currentStep--">
+					Back
+				</button>
 				<button type="button" class="btn btn-primary" v-on:click="opoinkinstall.goTo(opoinkinstall.currentStep)">
 					{{opoinkinstall.buttonName['step' + opoinkinstall.currentStep]}}
 				</button>
