--- a/View/Sys/vue/components/opoinkinstallcard/template.html
+++ b/View/Sys/vue/components/opoinkinstallcard/template.html
@@ -103,24 +103,80 @@
 						</div>
 						<div class="form-group">
 							<label for="input_email">Email <span class="fc-red">*</span></label>
-							<input type="text" class="form-control" id="input_email" v-model="opoinkinstall.form.sysuser.email"/>
+							<input type="email" class="form-control" id="input_email" v-model="opoinkinstall.form.sysuser.email"/>
 							<small class="form-text text-muted">It is important for you to type a working email address here.</small>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="form-group">
 							<label for="input_password">Password <span class="fc-red">*</span></label>
-							<input type="text" class="form-control" id="input_password" v-model="opoinkinstall.form.sysuser.password"/>
+							<input type="password" class="form-control" id="input_password" v-model="opoinkinstall.form.sysuser.password"/>
 						</div>
 						<div class="form-group">
-							<label for="input_retype_password">Retype Password <span class="fc-red">*</span></label>
-							<input type="text" class="form-control" id="input_retype_password" v-model="opoinkinstall.form.sysuser.retypepassword"/>
+							<label for="input_retype_password">Re-type Password <span class="fc-red">*</span></label>
+							<input type="password" class="form-control" id="input_retype_password" v-model="opoinkinstall.form.sysuser.retypepassword"/>
 						</div>
+					</div>
+				</div>
+				<p class="mT-15 fc-red" v-if="opoinkinstall.form.sysuser.error">{{opoinkinstall.form.sysuser.error}}</p>
+			</div>
+
+			<div v-if="opoinkinstall.currentStep == 5">
+				<div class="row mT-30">
+					<div class="col-md-6">
+						<p class="mB-5 fs-18 fw-800">
+							System and Admin Link: <span class="fs-16 fw-400">This will be the suffix for the System’s and Admin’s link. These two are optional but highly recommended if you are going to deploy your project into production mode.</span>
+						</p>
+						<div class="form-group mT-30">
+							<label for="input_admin_url">Admin URL: {{opoinkinstall.getUrl()}}/admin{{opoinkinstall.form.urls.admin_url}}</label>
+							<input type="text" class="form-control" id="input_admin_url" v-model="opoinkinstall.form.urls.admin_url" maxlength="10"/>
+						</div>
+						<div class="form-group">
+							<label for="input_system_url">System URL: {{opoinkinstall.getUrl()}}/system{{opoinkinstall.form.urls.system_url}}</label>
+							<input type="text" class="form-control" id="input_system_url" v-model="opoinkinstall.form.urls.system_url" maxlength="10"/>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<p class="mB-5 fs-18 fw-800">
+							Auth: <span class="fs-16 fw-400">This are used for authentication.</span>
+						</p>
+						<div class="form-group mT-30">
+							<label for="input_auth_key">Admin URL: </label>
+							<input type="text" class="form-control" id="input_auth_key" v-model="opoinkinstall.form.urls.auth_key" maxlength="10"/>
+						</div>
+						<div class="form-group">
+							<label for="input_auth_secret">System URL:</label>
+							<input type="text" class="form-control" id="input_auth_secret" v-model="opoinkinstall.form.urls.auth_secret" maxlength="10"/>
+						</div>
+					</div>
+				</div>
+				<p class="mT-15 fc-red" v-if="opoinkinstall.form.urls.error">{{opoinkinstall.form.urls.error}}</p>
+			</div>
+			<div v-if="opoinkinstall.currentStep == 6">
+				<p class="mB-5 fs-18 fw-800">
+					System and Admin Panel: <span class="fs-16 fw-400">Don't forget to save this information before anything else.</span>
+				</p>
+				<div class="row mT-30">
+					<div class="col-md-6">
+						<p class="mB-5 fs-16">
+							System Url: <span><a v-bind:href="opoinkinstall.getUrl() + '/system' + opoinkinstall.form.urls.system_url">{{opoinkinstall.getUrl()}}/system{{opoinkinstall.form.urls.system_url}}</a></span>
+						</p>
+						<p class="mB-5 fs-16">
+							Admin Url: <span><a v-bind:href="opoinkinstall.getUrl() + '/admin' + opoinkinstall.form.urls.admin_url">{{opoinkinstall.getUrl()}}/admin{{opoinkinstall.form.urls.admin_url}}</a></span>
+						</p>
+						<p class="mB-5 fs-16">
+							Front Url: <span><a v-bind:href="opoinkinstall.getUrl()">{{opoinkinstall.getUrl()}}</a</span>
+						</p>
+					</div>
+					<div class="col-md-6">
+						<p class="mB-5 fs-16">System Admin Email: <span>{{opoinkinstall.form.sysuser.email}}</span></p>
+						<p class="mB-5 fs-16">System Admin Password: <span>{{opoinkinstall.form.sysuser.password}}</span></p>
+						
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="card-footer">
+		<div class="card-footer" v-if="opoinkinstall.currentStep < 6">
 			<div class="text-right">
 				<button type="button" class="btn btn-outline-primary mR-15" v-if="opoinkinstall.currentStep > 1" v-on:click="opoinkinstall.currentStep--">
 					Back
