--- a/View/Sys/Templates/system_install_index.phtml
+++ b/View/Sys/Templates/system_install_index.phtml
@@ -4,4 +4,4 @@
 * Licensed under MIT, see LICENSE.md
 */
 ?>
-<opoinkinstall :opoinkinstall="opoinkinstall"></opoinkinstall>
+<opoinkinstall :opoinkinstall="opoinkinstall" :loader="loader"></opoinkinstall>
