--- a/View/Sys/Templates/system_index_index.phtml
+++ b/View/Sys/Templates/system_index_index.phtml
@@ -5,5 +5,7 @@
 */
 ?>
 <sidenav :sidenav="sidenav" :url="url"></sidenav>
-
-<systemindexindex></systemindexindex>
+<div class="container-wrapper">
+	<mainheader :mainheader="mainheader"></mainheader>
+	<systemindexindex :systemindexindex="systemindexindex"></systemindexindex>
+</div>
