--- a/View/Sys/vue/components/sidenav/template.html
+++ b/View/Sys/vue/components/sidenav/template.html
@@ -33,7 +33,7 @@
 
 	<div class="c-pointer sbn H-55 d-flex justify-content-center align-items-center" v-on:click="sidenav.showChildNav('Modules')">
 		<div class="list left d-flex justify-content-center align-items-center text-white">
-			<i class="fas fa-cogs"></i>
+			<i class="fas fa-cubes"></i>
 		</div>
 		<div class="list right d-flex align-items-center text-white pL-10">
 			Modules
