--- a/View/Sys/Layout/default.phtml
+++ b/View/Sys/Layout/default.phtml
@@ -35,6 +35,7 @@
             <?= $template ?>
             <loader :loader="loader"></loader>
             <toast :toast="toast"></toast>
+            <modalconfirm :modalconfirm="modalconfirm"></modalconfirm>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
