--- a/View/Sys/vue/components/systemmoduleindex/template.html
+++ b/View/Sys/vue/components/systemmoduleindex/template.html
@@ -147,4 +147,19 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="modInstallModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+	  <div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="card">
+				<div class="card-header">
+					sadsa
+				</div>
+				<div class="card-body">
+					<p class="fs-14 mb-0" v-for="task of systemmoduleindex.installTasks">{{task}}</p>
+				</div>
+			</div>
+		</div>
+	  </div>
+	</div>
 </div>
