--- a/View/Sys/vue/components/systemmoduleindex/template.html
+++ b/View/Sys/vue/components/systemmoduleindex/template.html
@@ -62,7 +62,11 @@
 											</template>
 										</div>
 									</th>
-									<td class="fs-14">Action</th>
+									<td class="fs-14">
+										<a v-bind:href="systemmoduleindex.url.getUrl('/module/edit/mod/' + module.key)">
+											<i class="far fa-edit"></i><span class="mL-5">Edit</span>
+										</a>
+									</th>
 								</tr>
 							</template>
 						</tbody>
@@ -135,7 +139,11 @@
 											</template>
 										</div>
 									</th>
-									<td class="fs-14">Action</th>
+									<td class="fs-14">
+										<a v-bind:href="systemmoduleindex.url.getUrl('/module/edit/mod/' + module.key)">
+											<i class="far fa-edit"></i><span class="mL-5">Edit</span>
+										</a>
+									</th>
 								</tr>
 							</template>
 						</tbody>
@@ -155,16 +163,18 @@
 				<div class="card-header">
 					Module {{systemmoduleindex.modalAction}} tasks
 				</div>
-				<div class="card-body">
-					<p class="fs-14 mb-30" v-if="systemmoduleindex.modalAction == 'upgrade'">
-						If you are sure to upgrade all selected module click <button class="btn btn-outline-primary" v-on:click="systemmoduleindex.upgradeModules('upgrade')">Upgrade now</button>
-					</p>
-					<p class="fs-14 mb-30" v-if="systemmoduleindex.modalAction == 'uninstall'">
-						If you are sure to uninstall all selected module click <button class="btn btn-outline-danger" v-on:click="systemmoduleindex.upgradeModules('uninstall')">Uninstall now</button>
-					</p>
-					<p class="fs-14 mb-30" v-if="systemmoduleindex.modalAction == 'install'">
-						If you are sure to install all selected module click <button class="btn btn-outline-primary" v-on:click="systemmoduleindex.installModules('uninstall')">Install now</button>
-					</p>
+				<div class="card-body MH-400 of-auto">
+					<template v-if="!systemmoduleindex.initializing">
+						<p class="fs-14 mb-30" v-if="systemmoduleindex.modalAction == 'upgrade'">
+							If you are sure to upgrade all selected module click <button class="btn btn-outline-primary" v-on:click="systemmoduleindex.upgradeModules('upgrade')">Upgrade now</button>
+						</p>
+						<p class="fs-14 mb-30" v-if="systemmoduleindex.modalAction == 'uninstall'">
+							If you are sure to uninstall all selected module click <button class="btn btn-outline-danger" v-on:click="systemmoduleindex.upgradeModules('uninstall')">Uninstall now</button>
+						</p>
+						<p class="fs-14 mb-30" v-if="systemmoduleindex.modalAction == 'install'">
+							If you are sure to install all selected module click <button class="btn btn-outline-primary" v-on:click="systemmoduleindex.installModules('uninstall')">Install now</button>
+						</p>
+					</template>
 					<p class="fs-14 mb-0" v-for="task of systemmoduleindex.installTasks">{{task}}</p>
 				</div>
 				<div class="card-footer text-right" v-if="systemmoduleindex.moduleTaskFinishButton">
