add controller confidtions for regex

--- a/View/Sys/vue/components/opoinkinstallcard/template.html
+++ b/View/Sys/vue/components/opoinkinstallcard/template.html
@@ -37,15 +37,15 @@
 					</span>
 					{{opoinkinstall.requirement.writabledir.message}}
 				</p>
-				<p class="mB-0 mT-30">We highly recommend to use Maria Database server version: ^10.x.x</p>
+				<p class="mB-0 mT-30">Currently, Opoink are stabled in MariaDB and MySql, we recommend to use MariaDB version ^10.x.x or MySql version ^8.x.x</p>
 			</div>
 			<div v-if="opoinkinstall.currentStep == 3">
 				<p class="mB-5 fs-18 fw-800">
 					Database: 
-					<span class="fs-16 fw-400">Make sure that the database name was already exisitng.</span>
-					<span class="fs-16 fw-400">If not Opoink will try to create a database.</span>
+					<span class="fs-16 fw-400">Make sure that the database name is already existing. </span>
+					<span class="fs-16 fw-400">If not, please create one first then go back here.</span>
 					<br />
-					<span class="fs-16 fw-400">We highly recommend to use MariaDB version: ^10.x.x</span>
+					<span class="fs-16 fw-400">We recommend to use MariaDB version ^10.x.x or MySql version ^8.x.x</span>
 				</p>
 				<div class="row mT-30">
 					<div class="col-md-6">
