--- a/View/Sys/vue/components/systemmoduleedit/template.html
+++ b/View/Sys/vue/components/systemmoduleedit/template.html
@@ -90,7 +90,7 @@
 								id="controller_action_regex" 
 								v-model="systemmoduleedit.controllerForm.controller_action_regex"
 							>
-							<label class="form-check-label" for="controller_action_regex">Use controller regex <small class="text-muted">use regular expression for controller.</small></label>
+							<label class="form-check-label" for="controller_action_regex">Use action regex <small class="text-muted">use regular expression for controller.</small></label>
 						</div>
 						<input 
 							id="controller_action" 
