--- a/View/errortrace.phtml
+++ b/View/errortrace.phtml
@@ -68,7 +68,7 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12">
 					<div class="error-info">
-						<h4>Error Occured:</h4>
+						<h4>Error occurred:</h4>
 						<p>Type: <?= get_class($e) ?></p>
 						<p>Message: <?= $e->getMessage() ?></p>
 						<p>File: <?= $e->getFile() ?></p>
