--- a/View/Sys/vue/components/systemmoduleedit/template.html
+++ b/View/Sys/vue/components/systemmoduleedit/template.html
@@ -29,6 +29,13 @@
 				</div>
 				<div class="card-body">
 					<div class="form-group">
+						<label for="controller_type">Controller For</label>
+						<select class="select2 form-control custom-select" id="controller_type" v-model="systemmoduleedit.controllerForm.controller_type">
+							<option value="public">Public</option>
+							<option value="admin">Admin</option>
+						</select>
+					</div>
+					<div class="form-group">
 						<label for="controller_route">Route</label>
 						<div class="form-check">
 							<input 
