--- a/View/Sys/vue/components/systemmoduleedit/template.html
+++ b/View/Sys/vue/components/systemmoduleedit/template.html
@@ -112,6 +112,17 @@
 							<small class="text-muted">The URL will be <code>http://domain.com/route/controller/string.html</code></small>
 						</template>
 					</div>
+
+					<div class="form-group">
+						<label for="extend_to_class">Extend To Class</label>
+						<input 
+							id="extend_to_class" 
+							name="extend_to_class" 
+							type="text" 
+							class="form-control"
+							v-model="systemmoduleedit.controllerForm.extend_to_class"
+						>
+					</div>
 				</div>
 				<div class="card-footer">
 					<button class="btn btn-primary" v-on:click="systemmoduleedit.createController()">Create Controller</button>
