--- a/View/Sys/vue/components/sidenav/template.html
+++ b/View/Sys/vue/components/sidenav/template.html
@@ -46,7 +46,7 @@
 				<i class="fas fa-sign-out-alt"></i>
 			</div>
 			<div class="list right d-flex align-items-center text-white pL-10">
-				Logout
+				Logout 
 			</div>
 		</div>
 	</a>
@@ -83,5 +83,8 @@
 				</div>
 			</a>
 		</div>
+	</div>
+	<div class="side-footer">
+		<p class="">Framework v1.2.0</p>
 	</div>
 </div>
