--- a/View/Sys/vue/components/sidenav/template.html
+++ b/View/Sys/vue/components/sidenav/template.html
@@ -85,6 +85,6 @@
 		</div>
 	</div>
 	<div class="side-footer">
-		<p class="">Framework v1.2.0</p>
+		<p class="">Framework pre-v1.2.0</p>
 	</div>
 </div>
