--- a/View/Sys/vue/components/systemindexindex/template.html
+++ b/View/Sys/vue/components/systemindexindex/template.html
@@ -36,7 +36,7 @@
 						>
 							<div class="d-flex w-100 justify-content-between">
 								<p class="m-0 fw-800">{{announcement.title}}</p>
-								<small>{{moment(announcement.created_at, "DD-MM-YYYY").format("MMM DD, YYYY")}}</small>
+								<small>{{moment(announcement.created_at, "YYYY-MM-DD").format("MMM DD, YYYY")}}</small>
 							</div>        
 							<p class="m-0">{{announcement.shortDescription}}</p>
 						</a>
@@ -78,6 +78,37 @@
 		    				<li>Help us to imrpove documentation</li>
 		    			</ul>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row mT-30">
+		<div class="col-md-12">
+			<div class="card">
+				<div class="card-header">
+					<h5 class="m-0">Reports and Suggestions</h5>
+				</div>
+				<div class="card-body">
+					<p>
+						Your comment and suggestion is important for us. Please help us improve the Opoink Framework by sending us a report and your suggestion.
+					</p>
+
+					<p>
+						Send us an email for a report at <a href="mailto:report@opoink.com">report@opoink.com</a> please include what bug or issue is encountered, the PHP version, and database server version as well.
+					</p>
+					
+					<p>
+						A screenshot of the issue will be much more appreciated.
+					</p>
+					
+					<p>
+						For suggestions please email it on <a href="mailto:suggest@opoink.com">suggest@opoink.com</a>.
+					</p>
+					
+					<p>
+						Thanks alot for using the Opoink Framework.
+					</p>
 				</div>
 			</div>
 		</div>
